--- a/pom.xml
+++ b/pom.xml
@@ -9,4 +9,14 @@
     <version>1.0-SNAPSHOT</version>
 
 
+    <dependencies>
+        <dependency>
+            <groupId>org.apache.pdfbox</groupId>
+            <artifactId>pdfbox</artifactId>
+            <version>2.0.12</version>
+        </dependency>
+    </dependencies>
+
+
+
 </project>
